<resources>
    <string name="app_name">Myworld</string>
    <string name="large_text">"Avoiding elevation interference.\n\n" </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Home Fragment -->
    <string name="drop_down">"Drop Down Menu"</string>
    <string name="gallery_image">Gallery Image</string>
    <!--video upload category list-->
    <string-array name="category">
        <item>Select Video Category</item>
        <item>Film and animation</item>
        <item>Cars and vehicles</item>
        <item>Music</item>
        <item>Pets and animals</item>
        <item>Sport</item>
        <item>Travel and events</item>
        <item>Gaming</item>
        <item>People and blogs </item>
        <item>Comedy</item>
        <item>Entertainment</item>
        <item>News and politics</item>
        <item>How-to and style</item>
        <item>Education</item>
        <item>Science and technology</item>
        <item>Non-profits and activism</item>
    </string-array>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_up">SignUp</string>
    <string name="already_have_an_account_login">Already have an account/ Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account/ SignUp</string>
    <string name="music_name">music namevdfvfdv</string>
    <string name="video_description">Prime Time With hghjgfgfgjh Ravish Kumar - सियासी दलों को प्रदर्शन ियासी दलों को प्रदर्शन</string>
    <string name="user_name">rajat kumar</string>
    <string name="camera_intro_text">Create and edit video, and explore new ways to express yourself</string>
    <string name="permisison_allow_button">Allow Access</string>
    <string name="addContactDetails">Add</string>
    <string name="save_edit_profile">Save</string>
    <string name="edit_profile_add_intro">Add</string>
    <string name="edit_profile_channel_name">Add</string>
    <string name="edit_profile_user_name">Add</string>
    <string name="edit_profile_UserName">Name</string>
    <string name="search_here">Search Here</string>
</resources>