<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_16"
    tools:context=".fragment.authfragments.LoginFragment">

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:maxEms="10" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_username"
        android:layout_marginTop="@dimen/dimen_16"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxEms="10"
        android:minEms="5" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_password"
        android:layout_marginTop="@dimen/dimen_16"
        android:backgroundTint="@color/cpRed"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/cpDark" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


</RelativeLayout>