<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/cpWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_appBar_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cpWhite"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/search_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/editprofile_card_view"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        app:cardCornerRadius="55dp"
        android:layout_marginTop="30dp"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_appBar_Layout">

        <ImageView
            android:id="@+id/user_profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cpBackground"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_user_defolt_avator" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/uep_textname"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="343dp"
        android:text="@string/edit_profile_UserName"
        android:textColor="@color/cphelptext"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editprofile_card_view" />

    <EditText
        android:id="@+id/uep_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="Sk Sariful Islam"
        android:hint="@string/edit_profile_user_name"
        android:textColor="@color/cpDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_textname" />

    <View
        android:id="@+id/uep_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/cpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_edit_name" />

    <TextView
        android:id="@+id/uep_chanelname"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Channel Name"
        android:textColor="@color/cphelptext"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_line" />

    <EditText
        android:id="@+id/uep_edit_chanelname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/cpDark"
        android:backgroundTint="#00000000"
        android:text="Myworld Inc"
        android:hint="@string/edit_profile_channel_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_chanelname" />

    <View
        android:id="@+id/uep_1line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/cpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_edit_chanelname" />

    <TextView
        android:id="@+id/uep_intro"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Intro"
        android:textColor="@color/cphelptext"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_1line" />

    <EditText
        android:id="@+id/uep_edit_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/cpDark"
        android:backgroundTint="#00000000"
        android:text="arifulsasad dxasdasds dsadasd"
        android:hint="@string/edit_profile_add_intro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_intro" />

    <View
        android:id="@+id/uep_3line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/cpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_edit_intro" />

    <TextView
        android:id="@+id/uep_email"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Email or Phone"
        android:textColor="@color/cphelptext"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_3line" />

    <EditText
        android:id="@+id/uep_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#00000000"
        android:text="8874324535"
        android:textColor="@color/cpDark"
        android:hint="@string/addContactDetails"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_email" />

    <View
        android:id="@+id/uep_4line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/cpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uep_edit_email"/>

    <Button
        android:id="@+id/save_button_edit_profile_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_edit_profile"
        android:background="@color/cpWhite"
        android:layout_marginEnd="30dp"
        android:textColor="@color/cpDark"
        app:layout_constraintBottom_toBottomOf="@+id/search_appBar_Layout"
        app:layout_constraintEnd_toEndOf="@+id/search_appBar_Layout"
        app:layout_constraintTop_toTopOf="@+id/search_appBar_Layout" />

    <ImageView
        android:id="@+id/back_navigation_button_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/search_appBar_Layout"
        app:layout_constraintStart_toStartOf="@+id/search_appBar_Layout"
        app:layout_constraintTop_toTopOf="@+id/search_appBar_Layout"
        app:srcCompat="@drawable/ic_back_arow" />

</androidx.constraintlayout.widget.ConstraintLayout>