<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sigin"
            type="com.example.myworld.viewmodel.authviewmodels.SignInViewModel" />

        <variable
            name="scontext"
            type="com.example.myworld.activity.authactivities.SignInActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".activity.MainActivity">

        <TextView
            android:id="@+id/btnSignUpGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{sigin::goToSignUp}"
            android:text="@string/don_t_have_an_account_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintTop_toTopOf="@+id/btnSignUpGo"
            tools:layout_editor_absoluteX="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUsername"
                    tilError="@{sigin.usernameError}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsrname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_username"
                        android:text="@={sigin.usernameText}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    tilError="@{sigin.passError}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tilUsername"
                    app:layout_constraintVertical_bias="0.08"
                    tools:layout_editor_absoluteX="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:text="@={sigin.passwordText}"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="575dp" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{sigin::signIn}"
            android:text="@{sigin.txtLoginButton, default=`Button Text`}"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>