<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="EditUserProfileViewModel"
            type="com.example.myworld.viewmodel.EditUserProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/cpWhite">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/search_appBar_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cpWhite"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/search_toolbar"
                android:backgroundTint="#fff"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/editprofile_card_view"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="55dp"
            app:cardElevation="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_appBar_Layout">


            <ImageView
                android:id="@+id/user_profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cpBackground"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_user_defolt_avator" />


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/uep_textname"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="343dp"
            android:text="@string/edit_profile_UserName"
            android:textColor="@color/cphelptext"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_card_view" />

        <TextView
            android:id="@+id/uep_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/edit_profile_user_name"
            android:maxLines="1"
            android:text="Sk Sariful Islam"
            android:textColor="@color/cpDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_textname" />

        <View
            android:id="@+id/uep_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/cpIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_username" />

        <TextView
            android:id="@+id/uep_email"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="Email"
            android:textColor="@color/cphelptext"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_line" />

        <TextView
            android:id="@+id/uep_edit_chanelname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/edit_profile_channel_name"
            android:text="pranshusaurav0402@gmail.com"
            android:textColor="@color/cpDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_email" />

        <View
            android:id="@+id/uep_1line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/cpIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_edit_chanelname" />

        <TextView
            android:id="@+id/uep_gender"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="Gender"
            android:textColor="@color/cphelptext"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_1line" />

        <EditText
            android:id="@+id/uep_edit_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#00000000"
            android:hint="M/F"
            android:maxLength="1"
            android:text="@={EditUserProfileViewModel.gender}"
            android:textColor="@color/cpDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_gender" />

        <View
            android:id="@+id/uep_3line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/cpIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_edit_gender" />

        <TextView
            android:id="@+id/uep_dob"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="Date of Birth"
            android:textColor="@color/cphelptext"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_3line" />

        <EditText
            android:id="@+id/uep_edit_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#00000000"
            android:inputType="date"
            android:text="@={EditUserProfileViewModel.dateOfBirth, default=`YYYY-MM-DD`}"
            android:textColor="@color/cpDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_dob" />

        <View
            android:id="@+id/uep_4line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/cpIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uep_edit_dob" />

        <Button
            android:id="@+id/save_button_edit_profile_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#000"
            android:onClick="@{EditUserProfileViewModel::saveEditProfile}"
            android:text="@string/save_edit_profile"
            android:textColor="@color/cpWhite"
            app:layout_constraintBottom_toBottomOf="@+id/search_appBar_Layout"
            app:layout_constraintEnd_toEndOf="@+id/search_appBar_Layout"
            app:layout_constraintTop_toTopOf="@+id/search_appBar_Layout" />

        <ImageView
            android:id="@+id/back_navigation_button_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/search_appBar_Layout"
            app:layout_constraintStart_toStartOf="@+id/search_appBar_Layout"
            app:layout_constraintTop_toTopOf="@+id/search_appBar_Layout"
            app:srcCompat="@drawable/ic_back_arow" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>